--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "outputDirectory": "dist",
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "vite",
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./server",
   "rewrites": [
     {
       "source": "/api/(.*)",
