--- a/.vercelignore
+++ b/.vercelignore
@@ -1,12 +1,39 @@
+# Dependencies
 node_modules
 server/node_modules
+
+# Build outputs
+dist
+build
 server/dist
+
+# Server source files - CRITICAL: These should NEVER be served
+server/src
+server/tsconfig.json
+server/package.json
+server/package-lock.json
+server/README.md
+server/env.example
 server/vercel.json
+
+# Environment files
 .env
 .env.local
 .env.*.local
+server/.env
+server/.env.local
+
+# Logs and temp files
 *.log
 .DS_Store
-dist
-build
 
+# TypeScript source files (except API handlers and frontend)
+*.ts
+!api/**/*.ts
+!src/**/*.ts
+!vite.config.ts
+!tsconfig*.json
+
+# Documentation
+*.md
+!README.md
