--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,13 @@
   "outputDirectory": "dist",
   "installCommand": "npm install --legacy-peer-deps --ignore-scripts",
   "framework": "vite",
+  "functions": {
+    "api/[...path].ts": {
+      "runtime": "nodejs20.x",
+      "memory": 1024,
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
